--- a/compose.yml
+++ b/compose.yml
@@ -16,10 +16,10 @@ services:
     restart: unless-stopped
 
   api:
-    # image: ghcr.io/nogringo/blone:latest
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/nogringo/blone:latest
+    # build: 
+    #   context: .
+    #   dockerfile: Dockerfile
     ports:
       - "${BLOSSOM_API_PORT}:3000"
     volumes:
